Making cards flyout when clicked, so people can actually read what the cards do!

--- a/css/dom.css
+++ b/css/dom.css
@@ -171,6 +171,11 @@ img.card {
 	border-radius: 9px;
 	margin:5px;
 }
+#loader img {
+	border:2px solid grey;
+	border-radius: 20px;
+	
+}
 
 /*
 .card-Copper   		{background-image:url('../images/copper.jpg');}
