--- a/htdocs/css/dom.css
+++ b/htdocs/css/dom.css
@@ -1,5 +1,5 @@
-html, body {
-height: 100%;
+html, body ,#container{
+height: 99%%;
 }
 
 #supply, #discard, #play, #hand, #trash {
@@ -114,7 +114,7 @@ border: 5px solid #62C7FC;
 	border-radius: 10px;
 	border: 5px solid #e7e7e7;
 	width:27%;
-	float:left;
+	float:right;
 	height:42%;
 	margin-bottom:1%;
 }
